add: get note by id
